feat(PRO-612): schedule private extension analysis
